--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 :root {
-    --gray: #F0F0F0;
-    --dark-gray: #5C5C5C;
-    --accent: #28D979;
+    --gray: #f0f0f0;
+    --dark-gray: #5c5c5c;
+    --accent: #28d979;
 
     --border-radius: 32px;
-    --padding: 32px;
+    --padding: 24px;
     --gap: 32px;
     --content-width: 1100px;
 
@@ -16,13 +16,17 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: "Poppins", sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .main-container {
     padding: var(--padding);
     margin: auto;
     width: var(--content-width);
+
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap);
 }
 
 .block {
@@ -36,25 +40,38 @@ body {
     font-weight: 600;
 }
 
-h1 {
-    font-size: 28px;
+h1,
+h2,
+h3,
+h4 {
     font-weight: 500;
     margin: 0;
+}
+
+h1 {
+    font-size: 28px;
 }
 
 h2 {
     font-size: 24px;
-    font-weight: 500;
-    margin: 0;
 }
 
 h3 {
     font-size: 20px;
-    font-weight: 500;
+}
+
+h4 {
+    font-size: 16px;
+}
+
+li,
+p {
+    font-size: 16px;
+    font-weight: 400;
     margin: 0;
 }
 
-.gray {
+.gray-clr {
     color: var(--dark-gray);
 }
 
@@ -62,10 +79,12 @@ h3 {
     flex: 1;
 }
 
-header {
+.flex-container {
     display: flex;
     gap: var(--gap);
+}
 
+header {
     --block-size: 248px;
 }
 
@@ -103,4 +122,52 @@ header .block {
     height: 100%;
     border-radius: 8px;
     width: calc(var(--progress) * 1%);
+}
+
+.experience-block {
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap);
+}
+
+.experience-content {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 20px;
+    border-radius: 16px;
+    position: relative;
+}
+
+.accent-block {
+    background-color: var(--accent);
+    color: white;
+}
+
+.experience-content .title {
+    max-width: 300px;
+    min-width: 300px;
+}
+
+.experience-content ul {
+    padding: 0;
+    margin: 0;
+}
+
+.experience-content .text-container {
+    display: flex;
+}
+
+.tools-block {
+    min-width: 248px;
+}
+
+.float {
+    background-color: rgba(126, 115, 18, 0.4);
+    color: #DDF163;
+    position: absolute;
+    right: 20px;
+    padding: 4px 12px;
+    border-radius: 30px;
 }
