--- a/style.css
+++ b/style.css
@@ -160,10 +160,6 @@ header .block {
     display: flex;
 }
 
-.tools-block {
-    min-width: 248px;
-}
-
 .float {
     position: absolute;
     right: 20px;
@@ -234,4 +230,43 @@ footer .right-container {
 
 .contact-block p {
     font-size: 20px;
+}
+
+.tools-block {
+    min-width: 248px;
+    align-items: center;
+}
+
+.tools-block h1 {
+    width: 100%;
+}
+
+.tools-container {
+    position: relative;
+    background-color: white;
+    padding: var(--padding);
+    border-radius: 16px;
+    display: grid;
+    grid-template-columns: 30% 1fr;
+    gap: 42px;
+    width: fit-content;
+}
+
+.tools-container img {
+    width: 38px;
+    height: 38px;
+    object-fit: contain;
+}
+
+.tool-float {
+    right: 50%;
+    transform: translateX(50%);
+    top: -10px;
+    background-color: black;
+    color: white;
+    font-size: 10px;
+    font-weight: 500;
+    padding: 4px 16px;
+    border-radius: 200px;
+    white-space: nowrap;
 }
